# one-tool

./: .env.example  .gitignore  CHANGELOG.md  COMMANDS.md  README.md  TEST_STRATEGY.md  eslint.config.js  package-lock.json  package.json  try-cli.mjs  try-edit.mjs  tsconfig.json
python/: README.md  pyproject.toml
python/src/onetool/: __init__.py  c_locale.py  execution_policy.py  memory.py  parser.py  runtime.py  tool_schema.py  types.py  utils.py
python/src/onetool/commands/: __init__.py  core.py  register.py
python/src/onetool/commands/groups/: adapters.py  data.py  fs.py  system.py  text.py
python/src/onetool/commands/shared/: bytes.py  (+7 more)
python/src/onetool/extensions/: __init__.py  errors.py  flags.py  groups.py  inputs.py  types.py
python/src/onetool/testing/: __init__.py  adapters.py  assert_scenario.py  command_conformance.py  command_harness.py  demo_fixtures.py  demo_runtime.py  oracle_runner.py  scenario.py  world_builder.py
python/src/onetool/vfs/: __init__.py  errors.py  interface.py  local_vfs.py  memory_vfs.py  path_utils.py  policy.py
python/tests/: conftest.py  differential_driver.py  runtime_fixture_commands.py  snapshot_helpers.py  test_commands_snapshots.py  test_data_commands.py  test_execution_policy.py  test_extensions.py  test_grep_command.py  test_memory.py  test_package_exports.py  test_parser.py  test_runtime.py  test_runtime_snapshots.py  test_scenario_snapshots.py  test_sed_command.py  test_testing_surface.py  test_tool_schema.py  test_utils.py  test_vfs_errors.py  test_vfs_local.py  test_vfs_memory.py  test_vfs_path_utils.py
(+474 files in other folders)
