[project]
name = "onetool"
version = "0.1.0"
description = "Stateful CLI environment for LLM agents — no sandbox required"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onetool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
