[project]
name = "onetool"
version = "0.2.0"
description = "Stateful CLI environment for LLM agents — no sandbox required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["agent", "llm", "cli", "tool-use", "vfs"]
dependencies = []

[project.urls]
Repository = "https://github.com/yshaaban/one-tool"
Documentation = "https://github.com/yshaaban/one-tool/tree/master/python#readme"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onetool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
